<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gradle 用户指南</string>
    <string name="app_title">Gradle 用户指南 1.12</string>
    <string name="action_about">关于</string>
    <string name="action_refresh">刷新</string>
    <string name="loading">正在加载</string>
    <string name="title_activity_chapter">Chapter</string>
    <string name="title_activity_about">关于</string>
    <string name="about_author">作者：Geek_Soledad</string>
    <string name="about_weibo">weibo: @Geek_Soledad</string>
    <string name="about_blog">博客：http://blog.csdn.net/maosidiaoxian</string>
    <string name="about_email">Email: androider@githang.com</string>
    <string name="about_qq_group">Gradle 中文用户组：109752483</string>
    <string name="about_translation">有关翻译：\n
        本文档由 Gradle 中文用户组的成员共同翻译。\n
        由于翻译人少，进度较慢，其他章节敬请期待。</string>
    <string name="about_help">帮助：\n
        本程序对加载过的内容都会缓存到本地，点击右上角的刷新按钮可以强制重新请求以刷新内容。</string>
    <string name="about_contributors">翻译贡献者：\n
        (截至2014-12-02, Github上该项目的统计)\n
    @pkaq, @llitfkitfk, @msdx, @rover12421</string>
    <string name="about_icon">自0.2版本，图标由群友 @J | 文 提供</string>
    <string name="title_activity_process">翻译进度</string>

</resources>
