<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center_horizontal"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.githang.gradledoc.about.AboutActivity">

    <TextView
        android:padding="8dp"
        android:text="@string/about_author"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:padding="8dp"
        android:text="@string/about_weibo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:padding="8dp"
        android:text="@string/about_blog"
        android:autoLink="web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</LinearLayout>
